--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "storybook": "npm run build:css && storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build:css": "sass src/scss:build/css --style compressed",
+    "build:css": "sass src/scss/main.scss build/css/materia.min.css --style compressed --no-source-map",
     "watch:css": "sass --watch src/scss:build/css"
   },
   "repository": {
